[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/scripts/dots/dots.gd" type="Script" id=1]
[ext_resource path="res://source/nodes/connecting_line.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/resources/dot_colors_1.tres" type="Resource" id=3]
[ext_resource path="res://source/nodes/dot.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/scripts/core/gameplay.gd" type="Script" id=5]
[ext_resource path="res://source/scripts/visuals/dot_effects.gd" type="Script" id=6]
[ext_resource path="res://source/nodes/additional_moves_labels.tscn" type="PackedScene" id=7]

[node name="Gameplay" type="Node2D"]
script = ExtResource( 5 )

[node name="Dots" type="Node" parent="."]
script = ExtResource( 1 )
_dot_packed_scene = ExtResource( 4 )
_colors = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Dots"]

[node name="Control" type="Control" parent="Dots/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DotsPositions" type="GridContainer" parent="Dots/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -300.0
margin_right = 298.0
margin_bottom = 514.0
custom_constants/vseparation = 58
custom_constants/hseparation = 58
columns = 6

[node name="ConnectingLine" parent="." instance=ExtResource( 2 )]

[node name="DotEffects" type="Node" parent="."]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="DotEffects"]
layer = 0

[node name="NewDotsPositions" type="HBoxContainer" parent="DotEffects/CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -400.0
margin_bottom = -349.0
custom_constants/separation = 58
alignment = 1

[node name="Control" type="Control" parent="DotEffects/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="DotEffects/CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer2" type="CanvasLayer" parent="DotEffects"]

[node name="Control" type="Control" parent="DotEffects/CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AdditionalMovesLabels" parent="DotEffects/CanvasLayer2/Control" instance=ExtResource( 7 )]
visible = false

[editable path="DotEffects/CanvasLayer2/Control/AdditionalMovesLabels"]
